--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 07 11:36:08 IST 2025
-sdk.dir=/Users/macmini32gb/Library/Android/sdk
+#Sun Aug 10 13:53:20 PDT 2025
+sdk.dir=/Users/poojadaryani/Library/Android/sdk
